# TaskAthlete

./: .gitignore  Cargo.toml  README.md  combined.rs  default.nix  result  shell.nix  test_config.toml
.github/workflows/: main.yml  rust.yml
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  sync_client.rs
task-athlete-cli/src/: cli.rs  clippy.rs  handlers.rs  main.rs  output.rs
task-athlete-lib/: test_config.toml
task-athlete-lib/src/: config.rs  db.rs  lib.rs
task-athlete-lib/tests/: lib_test.rs
task-athlete-tui/: Cargo.toml  combined.rs
task-athlete-tui/src/: app.rs  combine.sh  main.rs  ui.rs
task-athlete-tui/src/app/: actions.rs  data.rs  input.rs  mod.rs  modals.rs  navigation.rs  navigation_helpers.rs  state.rs  utils.rs
task-athlete-tui/src/app/modals/: add_workout.rs  confirm_delete_bodyweight.rs  confirm_delete_workout_set.rs  create_exercise.rs  edit_workout.rs  mod.rs
task-athlete-tui/src/ui/: bodyweight_tab.rs  graphs_tab.rs  layout.rs  log_tab.rs  mod.rs  modals.rs  placeholders.rs  status_bar.rs  tabs.rs
task-athlete-tui/src/ui/modals/: confirmation.rs  create_exercise.rs  help.rs  helpers.rs  log_bodyweight.rs  mod.rs  pb_modal.rs  set_target_weight.rs  workout.rs
tests/: lib_test.rs
