[package]
name = "TaskAthlete"        # Or whatever you want to call your project
version = "0.1.0"           # Initial version
edition = "2021"            # Recommended edition

# --- Keep your existing sections below ---

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
comfy-table = "7.0"
dirs = "5.0"
rusqlite = { version = "0.30", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
toml = "0.8"

[features]
default = []
