[package]
name = "task-athlete-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1" # Keep for config, though TUI won't use it directly
dirs = "5.0"
reqwest = {version = "0.12.18", default-features = false, features = ["json", "rustls-tls"]}
rusqlite = { version = "0.31", features = ["chrono", "bundled"] } # Bundled is good for distribution
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1.41"

